2008-01-29  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc: on_flowtable_script_button_clicked():
	Make sure that we send the primary key value when refreshing after a button 
	was clicked. This fixes the bug that most of the fields were blanked after 
	clicking a button.

2008-01-28  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/document_glom.cc: load_after_layout_item_field():
	Call set_full_field_details() on the layout item, so we load the correct 
	formatting for that field type. For instance, this means we do not lose 
	the multiline formatting option when loading. 
	Thanks to Göran (TEK-en) for finding this bug.

2008-01-28  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/spawn_with_feedback.cc: Set IOChannel that reads stderr
	from child process to be nonblocking to make sure we don't block the
	whole process.

2008-01-27  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/glade_utils.h: Added Utils::get_glade_file_path() to
	locate the glade file relative to the application executable on
	Windows.

	* glom/dialog_invalid_data.cc:
	* glom/libglom/spawn_with_feedback.cc:
	* glom/utility_widgets/datawidget.cc:
	* glom/frame_glom.cc:
	* glom/layout_item_dialogs/dialog_field_layout.cc:
	* glom/layout_item_dialogs/dialog_group_by.cc:
	* glom/reports/dialog_layout_report.cc:
	* glom/translation/window_translations.cc:
	* glom/base_db.cc:
	* glom/main.cc:
	* glom/mode_data/dialog_layout_details.cc:
	* glom/mode_data/flowtablewithfields.cc:
	* glom/mode_data/box_data_list_related.cc:
	* glom/mode_data/box_data_list.cc:
	* glom/mode_data/box_data_details.cc:
	* glom/filechooser_export.cc:
	* glom/application.cc:
	* glom/mode_design/script_library/dialog_script_library.cc:
	* glom/mode_design/users/dialog_users_list.cc:
	* glom/mode_design/users/dialog_groups_list.cc:
	* glom/mode_design/fields/dialog_fielddefinition.cc:
	* glom/mode_design/fields/box_db_table_definition.cc: