@@ -1,3 +1,7 @@
+2008-01-31  Armin Burgmeier  <armin@openismus.com>
+
+	* glom/main.cc: Load translations relative to glom.exe on Windows.
+
 2008-01-29  Murray Cumming  <murrayc@murrayc.com>
 
 	* glom/mode_data/box_data_details.cc: on_flowtable_script_button_clicked():
